--- a/FeedPet/templates/pet/add_pet.html
+++ b/FeedPet/templates/pet/add_pet.html
@@ -1,95 +1,124 @@
 <!-- pet/add_pet.html -->
-{% extends "base.html" %}
-{% load static %}
-
-{% block header %}
+{% extends "base.html" %} {% load static %} {% block header %}
 <h2>註冊寵物</h2>
-{% endblock header %}
+{% endblock header %} {% block content %}
 
-{% block content %}
-
-<form name="addpet" class="ts form" method="post" enctype='multipart/form-data'
-    action="{% url 'master:mypet/add_pet' %}">
-    {% csrf_token %}
+<form
+  name="addpet"
+  class="ts form"
+  method="post"
+  enctype="multipart/form-data"
+  action="{% url 'master:mypet/add_pet' %}"
+>
+  {% csrf_token %}
+  <div class="field">
+    <label>名字</label>
+    <input
+      type="text"
+      id="petName"
+      name="petName"
+      required="required"
+      pattern="\S{0,20}"
+      placeholder="輸入小於20個字元"
+    />
+  </div>
+  <div class="fields">
     <div class="field">
-        <label>名字</label>
-        <input type="text" id="petName" name="petName" required="required" pattern="\S{0,20}" placeholder="輸入小於20個字元">
-    </div>
-    <div class="fields">
-        <div class="field">
-            <label>類別</label>
-            <div class="ts checkboxes">
-                <div class="ts radio checkbox">
-                    <input id="dog" type="radio" name="petClass" value="Dog">
-                    <label for="dog">狗狗</label>
-                </div>
-                <div class="ts radio checkbox">
-                    <input id="cat" type="radio" name="petClass" value="Cat">
-                    <label for="cat">貓貓</label>
-                </div>
-            </div>
+      <label>類別</label>
+      <div class="ts checkboxes">
+        <div class="ts radio checkbox">
+          <input id="dog" type="radio" name="petClass" value="Dog" />
+          <label for="dog">狗狗</label>
         </div>
-
-        <div class="field">
-            <label>性別</label>
-            <div class="ts checkboxes">
-                <div class="ts radio checkbox">
-                    <input id="firstMale" type="radio" name="petGender" value="Male">
-                    <label for="firstMale">公的</label>
-                </div>
-                <div class="ts radio checkbox">
-                    <input id="firstFemale" type="radio" name="petGender" value="Female">
-                    <label for="firstFemale">母的</label>
-                </div>
-            </div>
+        <div class="ts radio checkbox">
+          <input id="cat" type="radio" name="petClass" value="Cat" />
+          <label for="cat">貓貓</label>
         </div>
-
-        <div class="field">
-            <label>結紮</label>
-            <div class="ts checkboxes">
-                <div class="ts radio checkbox">
-                    <input id="yes" type="radio" name="ligation" value="Yes">
-                    <label for="yes">有</label>
-                </div>
-                <div class="ts radio checkbox">
-                    <input id="no" type="radio" name="ligation" value="No">
-                    <label for="no">無</label>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
 
     <div class="field">
-        <label>活動類型</label>
-        <select id="petType" name="petType">
-        </select>
+      <label>性別</label>
+      <div class="ts checkboxes">
+        <div class="ts radio checkbox">
+          <input id="firstMale" type="radio" name="petGender" value="Male" />
+          <label for="firstMale">公的</label>
+        </div>
+        <div class="ts radio checkbox">
+          <input
+            id="firstFemale"
+            type="radio"
+            name="petGender"
+            value="Female"
+          />
+          <label for="firstFemale">母的</label>
+        </div>
+      </div>
     </div>
 
-    <div class="fields">
-        <div class="field">
-            <label>體重</label>
-            <input type="number" id="weight" name="weight" required="required" onkeyup="value=value.replace(/^(0+)|[^\d]+/g,'')"> 
+    <div class="field">
+      <label>結紮</label>
+      <div class="ts checkboxes">
+        <div class="ts radio checkbox">
+          <input id="yes" type="radio" name="ligation" value="Yes" />
+          <label for="yes">有</label>
         </div>
-        <div class="field">
-            <label>生日</label>
-            <input type="date" id="birthday" name="birthday" required="required"/>
+        <div class="ts radio checkbox">
+          <input id="no" type="radio" name="ligation" value="No" />
+          <label for="no">無</label>
         </div>
+      </div>
     </div>
-    <div class="fields">
-        <div class="five wide field">
-            <label>照片(預覽)</label>
-            <img id="preview_progressbarTW_img" src="#" height="200" width="150" >
-        </div>
-        <div class="eleven wide field">
-            <label>上傳照片</label>
-            <input type="file" id="imgInp" name="image" onchange="readURL(this)" targetID="preview_progressbarTW_img"
-                accept="image/gif, image/jpeg, image/png" required="required"/>
-        </div>
-    </div>
+  </div>
 
-    <button class="ts positive button" type="submit">確認</button>
-    <input class="ts button" type="button" onclick="location.href='/mypet/'" value="取消">
-    <input type="hidden" name="next" value="{% url 'master:mypet' %}" />
+  <div class="field">
+    <label>活動類型</label>
+    <select id="petType" name="petType"></select>
+  </div>
+
+  <div class="fields">
+    <div class="field">
+      <label>體重</label>
+      <input
+        type="number"
+        id="weight"
+        name="weight"
+        required="required"
+        onkeyup="value=value.replace(/^(0+)|[^\d]+/g,'')"
+      />
+    </div>
+    <div class="field">
+      <label>生日</label>
+      <input type="date" id="birthday" name="birthday" required="required" />
+    </div>
+  </div>
+  <div class="fields">
+    <div class="five wide field">
+      <label>照片(預覽)</label>
+      <img id="preview_progressbarTW_img" src="#" height="200" width="150" />
+    </div>
+    <div class="eleven wide field">
+      <label>上傳照片</label>
+      <input
+        type="file"
+        id="imgInp"
+        name="image"
+        onchange="readURL(this)"
+        targetID="preview_progressbarTW_img"
+        accept="image/gif, image/jpeg, image/png"
+        required="required"
+      />
+    </div>
+  </div>
+
+  <button class="ts positive button" type="submit">確認</button>
+  <input
+    class="ts button"
+    type="button"
+    onclick="location.href='/mypet/'"
+    value="取消"
+  />
+  <input type="hidden" name="next" value="{% url 'master:mypet' %}" />
 </form>
 
 {% endblock content %}
